# mior

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  package.json  rustfmt.toml  sqlx-data.json  styles.css
.github/workflows/: ci.yml  rust.yml
components/: AddFeedDialog.tsx  EditFeedDialog.tsx  FeedList.tsx  FeedPreviewTable.tsx  NavBar.tsx
db/: db.sqlite-shm
db/migrations/: 20220522154224_create-feeds-table.sql  20220522154224_create-sources-table.sql
db/sqlx/: db.sqlite-shm  db.sqlite-wal
frontend/: next.config.js  package.json
frontend/common/: validation.ts
frontend/components/: EditFeedDialog.tsx  FeedList.tsx  FeedPreviewTable.tsx  LoginDialog.tsx  NavBar.tsx  RegisterDialog.tsx  RssInfoCard.tsx
frontend/models/: FeedItem.ts  User.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  my.tsx
frontend/src/: theme.ts
migrations/: 20220526153612_create-tables.sql
models/: FeedInfo.ts
pages/: _app.tsx  index.tsx
src/: api.rs  error.rs  feed.rs  fetch.rs  main.rs  model.rs  route.rs  tests.rs
src/tests/data/: 1.result.json  1.xml  2.result.json  2.xml  3.result.json  3.xml  4.result.json  4.xml  5.result.json  5.xml  merged.xml
src/util/: feed_merger.rs  feed_merger_v2.rs  feed_parser.rs  feed_parser_v2.rs  fetch.rs  mod.rs
