[package]
name = "mior-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
reqwest = { version = "0.11" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
xmltree = "0.10"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["macros", "offline", "migrate"]

