[package]
name = "mior-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
reqwest = { version = "0.11" }
xmltree = "0.10"
sha2 = "0.10"
thiserror = "1"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate", "chrono"]
