[package]
name = "mior-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11" }
xmltree = "0.10"
sha2 = "0.10"
thiserror = "1"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "6c3d35e7"
features = ["json", "secrets"]

[dependencies.rocket_db_pools]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "6c3d35e7"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "offline", "migrate", "chrono"]
